[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/background/bg_dialog.png" type="Texture" id=1]
[ext_resource path="res://assets/font/letter_gothic.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/object/btn/next_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/object/btn/take_btn.png" type="Texture" id=4]
[ext_resource path="res://assets/object/btn/cancel_btn.png" type="Texture" id=5]
[ext_resource path="res://assets/background/bg_name.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/Dialog/DialogInterface.gd" type="Script" id=7]
[ext_resource path="res://assets/object/btn/finish_btn.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 16 )

[node name="DialogInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundDialog" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -372.5
margin_top = -195.0
margin_right = 372.5
margin_bottom = -42.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextDialog" type="RichTextLabel" parent="BackgroundDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -336.0
margin_top = 22.0
margin_right = 337.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 307.5, 41 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchNextDialog" type="TouchScreenButton" parent="BackgroundDialog"]
pause_mode = 2
position = Vector2( 654.5, 134 )
normal = ExtResource( 3 )
shape = SubResource( 1 )

[node name="TouchFinishDialog" type="TouchScreenButton" parent="BackgroundDialog"]
pause_mode = 2
visible = false
position = Vector2( 654.5, 134 )
normal = ExtResource( 8 )
shape = SubResource( 1 )

[node name="TakeOrCancelDialog" type="HBoxContainer" parent="BackgroundDialog"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.5
margin_top = -19.0
margin_right = -25.5
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchTakeButton" type="TouchScreenButton" parent="BackgroundDialog/TakeOrCancelDialog"]
position = Vector2( 85, 0 )
normal = ExtResource( 4 )
shape = SubResource( 2 )

[node name="TouchCancelButton" type="TouchScreenButton" parent="BackgroundDialog/TakeOrCancelDialog"]
normal = ExtResource( 5 )
shape = SubResource( 3 )

[node name="BackgroundName" type="TextureRect" parent="BackgroundDialog"]
margin_left = 36.5
margin_top = -13.0
margin_right = 295.5
margin_bottom = 14.0
texture = ExtResource( 6 )
expand = true

[node name="NameLabel" type="Label" parent="BackgroundDialog/BackgroundName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -9.5
margin_right = 78.5
margin_bottom = 9.5
custom_fonts/font = ExtResource( 2 )
text = "Prof Nurdin RG"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="pressed" from="BackgroundDialog/TouchNextDialog" to="." method="_on_TouchNextDialog_pressed"]
[connection signal="pressed" from="BackgroundDialog/TouchFinishDialog" to="." method="_on_TouchFinishDialog_pressed"]
[connection signal="pressed" from="BackgroundDialog/TakeOrCancelDialog/TouchTakeButton" to="." method="_on_TouchTakeButton_pressed"]
[connection signal="pressed" from="BackgroundDialog/TakeOrCancelDialog/TouchCancelButton" to="." method="_on_TouchCancelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
